--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 { 
   "name": "WP Stats",
+  "short_name": "WP Stats",
   "author": "Zirconet",
   "description": "Show Wordpress hits",
-  "version": "1.5.0",
+  "version": "1.5.6",
   "manifest_version": 2,
 
   "options_ui": {
