--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "WP Stats",
   "author": "Zirconet",
   "description": "Show Wordpress hits",
-  "version": "1.6.5",
+  "version": "1.6.8",
   "manifest_version": 2,
 
   "options_ui": {
@@ -22,11 +22,20 @@
 	"default_popup": "popup.html"
   },
 
+"content_scripts": [
+    {
+      "matches": ["https://apikey.wordpress.com/"],
+      "css": ["js/inject.css"],
+      "js": ["js/inject.js"]
+    }
+ ],
+
   "permissions": [
 	"tabs",
         "storage",
 	"https://stats.wordpress.com/*/",
 	"https://wordpress.com/stats/*/",
+	"https://apikey.wordpress.com/",
 	"http://cittadinoimperfetto.altervista.org/WP_Stats/*/",
         "notifications"
   ],
